force-app/main/default/objects/Product2/fields/Aliq_IPI_Excessao__c.field-meta.xml
<CustomField>
    <fullName>Aliq_IPI_Excessao__c</fullName>
    <label>Aliq IPI Excessão</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>