force-app/main/default/objects/Product2/fields/Aliq_ST__c.field-meta.xml
<CustomField>
    <fullName>Aliq_ST__c</fullName>
    <label>Aliq ST</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>