force-app/main/default/objects/Product2/fields/Aplicacao__c.field-meta.xml
<CustomField>
    <fullName>Aplicacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aplicação</label>
    <referenceTo>Aplicacao__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>