force-app/main/default/objects/Product2/fields/Aplicacao_Resumida__c.field-meta.xml
<CustomField>
    <fullName>Aplicacao_Resumida__c</fullName>
    <label>Aplicação Resumida</label>
    <type>TextArea</type>
</CustomField>