force-app/main/default/objects/Product2/fields/Arquivo_Foto_Produto__c.field-meta.xml
<CustomField>
    <fullName>Arquivo_Foto_Produto__c</fullName>
    <label>Arquivo Foto Produto</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>