force-app/main/default/objects/Product2/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baterias</fullName>
            </value>
            <value>
                <fullName>Bomba</fullName>
            </value>
            <value>
                <fullName>Freio</fullName>
            </value>
            <value>
                <fullName>Ignição</fullName>
            </value>
            <value>
                <fullName>Pneus</fullName>
            </value>
            <value>
                <fullName>Polia</fullName>
            </value>
            <value>
                <fullName>Rodas</fullName>
            </value>
            <value>
                <fullName>Terminal de Direção</fullName>
            </value>
            <value>
                <fullName>Filtro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>