force-app/main/default/objects/Product2/fields/Cod_EAN__c.field-meta.xml
<CustomField>
    <fullName>Cod_EAN__c</fullName>
    <label>Cod EAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>