force-app/main/default/objects/Product2/fields/Cod_NBM__c.field-meta.xml
<CustomField>
    <fullName>Cod_NBM__c</fullName>
    <label>Cod NBM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>