force-app/main/default/objects/Product2/fields/Codigo_Cobra__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Cobra__c</fullName>
    <externalId>true</externalId>
    <label>Código Cobra</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>