force-app/main/default/objects/Product2/fields/CodigoProduto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProduto__c</fullName>
    <externalId>true</externalId>
    <label>Código Produto (Catálogo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>