force-app/main/default/objects/Product2/fields/Denominacao_Normal__c.field-meta.xml
<CustomField>
    <fullName>Denominacao_Normal__c</fullName>
    <label>Denominação Normal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>