force-app/main/default/objects/Product2/fields/FabricanteFormula__c.field-meta.xml
<CustomField>
    <fullName>FabricanteFormula__c</fullName>
    <formula>Fabricante__r.Name</formula>
    <label>FabricanteFormula</label>
    <type>Text</type>
</CustomField>