force-app/main/default/objects/Product2/fields/Flag_Lancamento__c.field-meta.xml
<CustomField>
    <fullName>Flag_Lancamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Lançamento</label>
    <type>Checkbox</type>
</CustomField>