force-app/main/default/objects/Product2/fields/Grupo_MM_Atualizado__c.field-meta.xml
<CustomField>
    <fullName>Grupo_MM_Atualizado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo MM Atualizado</label>
    <referenceTo>Grupo_MM_Atualizado__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>