force-app/main/default/objects/Product2/fields/GrupoMM__c.field-meta.xml
<CustomField>
    <fullName>GrupoMM__c</fullName>
    <label>Grupo MM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>