force-app/main/default/objects/Product2/fields/GrupoSimilar__c.field-meta.xml
<CustomField>
    <fullName>GrupoSimilar__c</fullName>
    <label>Grupo Similar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>