force-app/main/default/objects/Product2/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observação</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>