force-app/main/default/objects/Product2/fields/Origem_Material__c.field-meta.xml
<CustomField>
    <fullName>Origem_Material__c</fullName>
    <label>Origem Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>