force-app/main/default/objects/Product2/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <label>Peso</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>