force-app/main/default/objects/Product2/fields/Qtd_M_nima_Ordem__c.field-meta.xml
<CustomField>
    <fullName>Qtd_M_nima_Ordem__c</fullName>
    <label>Qtd Mínima Ordem</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>