force-app/main/default/objects/Product2/fields/Tipo_Material__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Material__c</fullName>
    <label>Tipo Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Graxa/Fluido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>